--- a/design/src/main/res/values-ko/strings.xml
+++ b/design/src/main/res/values-ko/strings.xml
@@ -97,7 +97,7 @@
     <string name="subscription_management_title">구독 관리</string>
     <string name="subscription_management_google_play">Google Play 에서 관리</string>
     <string name="subscription_management_help_title">도움이 필요하신가요?</string>
-    <string name="subscription_management_help_desc">구독 관련 문의는 Google Play 고객센터를 통해 해결하실 수 있습니다.</string>
+    <string name="subscription_management_help_desc">구독 서비스 관련 문의는 Google Play 고객센터를 통해 해결하실 수 있으며, 환불 관련 문의는 jowunnal310@gmail.com 으로 메일 주시기 바랍니다.</string>
     <string name="subscription_management_no_subscription">활성 구독이 없습니다</string>
     <string name="subscription_management_no_subscription_desc">프리미엄 구독으로 광고 없는 경험을 누리세요</string>
     <string name="subscription_management_view_plans">구독 플랜 보기</string>
@@ -115,7 +115,6 @@
     <string name="subscription_management_info_popup_intro">구독 정보는 </string>
     <string name="subscription_management_info_popup_estimate">예측치</string>
     <string name="subscription_management_info_popup_middle"> 에요.\n정확한 정보는</string>
-    <string name="subscription_management_info_popup_path">[Google Play > Settings > Payments &amp; subscriptions > Subscriptions]</string>
     <string name="subscription_management_info_popup_ending">\n에서 확인해 주세요.</string>
 
     <!-- Subscription Screen -->
