--- a/design/src/main/res/values-zh/strings.xml
+++ b/design/src/main/res/values-zh/strings.xml
@@ -4,6 +4,10 @@
     <!-- Gallery Screen -->
     <string name="gallery_title">相册</string>
     <string name="gallery_empty">空</string>
+    <string name="gallery_new_project">新项目</string>
+    <string name="gallery_new_project_desc">上传视频并翻译</string>
+    <string name="gallery_recently_completed">最近完成</string>
+    <string name="gallery_view_all">查看全部</string>
     <string name="content_desc_play_video">播放视频</string>
 
     <!-- Settings Screen -->
@@ -136,7 +140,28 @@
     <string name="subscription_footer_managed_by">• 订阅通过Google Play管理。</string>
     <string name="subscription_footer_auto_renewal">• 如果在订阅期结束前24小时内未取消，订阅将自动续订。</string>
     <string name="subscription_footer_refund_policy">• 退款政策遵循Google Play政策。</string>
+    <string name="subscription_error_headline">发生错误。</string>
+    <string name="subscription_error_product_not_found">商品不存在。</string>
 
     <!-- Term of Service Screen -->
     <string name="term_title">使用條款</string>
+
+    <!-- Setting Screen (More) -->
+    <string name="setting_title">更多</string>
+    <string name="setting_section_ai_model">AI模型设置</string>
+    <string name="setting_ai_models_languages">AI模型与语言</string>
+    <string name="setting_ai_models_languages_desc">配置AI模型和语言设置</string>
+    <string name="setting_section_subscription">订阅</string>
+    <string name="setting_manage_subscription">管理订阅</string>
+    <string name="setting_manage_subscription_desc">查看并升级您的方案</string>
+    <string name="setting_section_support">支持</string>
+    <string name="setting_term_desc">查看条款和条件</string>
+
+    <!-- Library Screen -->
+    <string name="library_title">资料库</string>
+    <string name="library_project_count">%d个项目</string>
+    <string name="library_projects_count">%d个项目</string>
+    <string name="library_sort_newest">最新优先</string>
+    <string name="library_sort_oldest">最旧优先</string>
+    <string name="library_empty">没有已完成的项目</string>
 </resources>
