--- a/documentation/review/클래스_설계_목적.md
+++ b/documentation/review/클래스_설계_목적.md
@@ -68,7 +68,7 @@ LSP 의 핵심은 잘 설계된 추상화 입니다.
 
 4. 의존성 역전 원칙(DIP)
 
-1. MediaFileManager : 기기 내부의 Media File 을 다룹니다. 이는 Platform 의존성(Android 의 경우 MediaCodec)이 강하며, 특정 Platform 에서 필요한 구현체를 주입할 수 있도록 추상화 합니다.
-2. AI 모델 : 이는 구체적인 AI 모델의 의존성이 강합니다. 특정 AI Model Category 에서 필요한 AI 구현체 모델을 주입할 수 있도록 추상화 합니다.
-3. AI Model Runtime Library : 이는 AI Model 의 특정 Format 에 의존성이 강합니다. 특정 AI Model 이 어떤 Format 으로 생성되었는가에 따라 필요한 Runtime Library 를 구성하도록 합니다.
+- MediaFileManager : 기기 내부의 Media File 을 다룹니다. 이는 Platform 의존성(Android 의 경우 MediaCodec)이 강하며, 특정 Platform 에서 필요한 구현체를 주입할 수 있도록 추상화 합니다.
+- AI 모델 : 이는 구체적인 AI 모델의 의존성이 강합니다. 특정 AI Model Category 에서 필요한 AI 구현체 모델을 주입할 수 있도록 추상화 합니다.
+- AI Model Runtime Library : 이는 AI Model 의 특정 Format 에 의존성이 강합니다. 특정 AI Model 이 어떤 Format 으로 생성되었는가에 따라 필요한 Runtime Library 를 구성하도록 합니다.
 
